--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "express-handlebars": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
