--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "showdown": "^1.9.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
